# dagutils

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/bitstream/: CMakeLists.txt  main.cpp
examples/datablock/: CMakeLists.txt  main.cpp
include/datablock/: datablock.cpp
libs/bitstream/: bitstream.h
libs/core/dag/: dag_config.h  dag_relocatable.h
libs/core/debug/: dag_assert.h  dag_log.h
libs/core/generic/: dag_initOnDemand.h  dag_tab.h
libs/core/kernel/: fatalerr.cpp  linux_globals.cpp
libs/core/math/: dag_IBBox2.h  dag_IBBox3.h  dag_IPoint2.h  dag_IPoint3.h  dag_IPoint4.h  dag_Matrix3.h  dag_Point3.h  dag_Quat.h  dag_TMatrix.h  dag_adjpow2.h  dag_bits.h  dag_bounds3.h  dag_color.h  dag_mathBase.h
libs/core/memory/: allocStep.cpp  dag_dbgMem.h  dag_memBase.h  dagmem.cpp  dlmalloc-2.8.4.h  mem.cpp  memoryTracker.h  stdRtlMemUsage.h  win32MoreCore.cpp
libs/core/osApiWrappers/: critsec.cpp  critsec.h  dag_compilerDefs.h  dag_stackHlp.h  limBufWriter.cpp  linux_critsec.cpp  linux_stackhlp.cpp  masqueradePEB.h  stackHlpFill.cpp
libs/core/startup/: dag_demoMode.h
libs/core/supply/: dag_define_KRNLIMP.h  dag_math.h
libs/core/util/: dag_baseDef.h  dag_bitwise_cast.h  dag_compilerDefs.h  dag_safeArg.cpp  dag_simpleString.h  limBufWriter.h  strImpl.cpp
libs/datablock/: datablock.cpp  datablock.h
src/: main.cpp
src/dag/: dag_vector.h
src/debug/: dag_debug.h  dag_fatal.h  dag_logSys.h
src/generic/: dag_carray.h  dag_qsort.H  dag_smallTab.h  dag_smallTab_decl.inl  dag_span.h  dag_tabFwd.h
src/kernel/: debugPrivate.h  writeStream.h
src/math/: dag_Point2.h  dag_Point4.h  dag_bounds2.h  dag_check_nan.h  dag_declAlign.h  dag_e3dColor.h  dag_half.h  defs.cpp  math3d.h  namemap.cpp  namemap.h
src/memory/: allocStep.cpp  allocStep.h  dag_genMemAlloc.H  dag_mem.h  dag_memBase.cpp  dag_memBase.h  dag_memPtrAllocator.h  dag_memStat.h  dlmalloc-2.8.4.cpp  dlmalloc.h  stdRtlMemUsage.h  stubRtl.cpp  stubRtlAlloc.inc.cpp
src/osApiWrappers/: dag_atomic.h  dag_compilerDefs.h  dag_critSec.h  dag_dbgStr.h  dag_direct.h  dag_fileIoErr.h  dag_files.h  dag_stackHlp.h  linux_stackhlp.cpp
src/startup/: dag_globalSettings.h
src/supply/: _platform.h  exportPull.h
src/util/: dag_globDef.h  dag_preprocessor.h  dag_safeArg.h  dag_stdint.h  dag_string.h  limBufWriter.h
wasm/: bindings.cpp
